Fixed title spacing in navbar

--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -28,13 +28,7 @@
     &-title {
       flex: 1 0 auto;
       font-size: 2.25rem;
-      padding-left: 49px;
       padding-right: 32px;
-
-      /* Increase left padding on large devices */
-      @include breakpoint($mq_large) {
-        padding-left: 56px;
-      }
     }
 
     /* Put the menu button on the right and adjust some positioning */
